<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailed_stats_outer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/detailed_stats_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <LinearLayout
            android:id="@+id/detailed_stats_inner_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

        <TableLayout
            android:id="@+id/detailed_stats_table_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TableRow
                android:id="@+id/detailed_stats_row_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/detailed_stats_score_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/game_view_stat_score"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/detailed_stats_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dp"
                    android:text="@string/game_view_dummy"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                android:id="@+id/detailed_stats_row_lines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/detailed_stats_lines_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/game_view_stat_lines"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/detailed_stats_lines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dp"
                    android:text="@string/game_view_dummy"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                android:id="@+id/detailed_stats_row_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/detailed_stats_level_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/game_view_stat_level"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/detailed_stats_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dp"
                    android:text="@string/game_view_dummy"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/detailed_stats_row_pieces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/detailed_stats_pieces_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/game_view_stat_pieces"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/detailed_stats_pieces"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dp"
                    android:text="@string/game_view_dummy"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            </TableLayout>

        <TextView
            android:id="@+id/detailed_stats_pieces_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/game_view_stat_pieces_detail_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TableLayout
            android:id="@+id/detailed_stats_table_layout_blocks"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </TableLayout>
            
        
        </LinearLayout>
    </ScrollView>

</LinearLayout>